--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.1",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "8.5.1",
-    "moment": "^2.29.3",
+    "moment": "^2.30.1",
     "nouislider": "^15.5.0",
     "nouislider-react": "^3.4.1",
     "postcss": "7.0.33",
@@ -49,6 +50,7 @@
     "postcss-rtl": "^1.5.0",
     "prismjs": "^1.28.0",
     "process": "^0.11.10",
+    "qs": "^6.11.2",
     "rc-input-number": "^7.3.11",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
